--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.1.1"
   }
